--- a/my-app/src/components/CSS/ProjectDetails.css
+++ b/my-app/src/components/CSS/ProjectDetails.css
@@ -1,19 +1,23 @@
 #pop-up{
     position: fixed;
     width: 100%;
-    height: 100%;
+    height: 120%;
     display: flex;
     flex-direction: column;
     margin-top: -700px;
+    margin-left: -30px;
     align-items: center;
     background: rgba(0, 0, 0, 0.59);
 }
-
-#delete-container {
+.btn{
+    font-size: 20px; 
+    font-weight: bold;   
+}
+#detail-container {
     width: 550px;
     height: 550px;
     background: #fff;
-    padding: 30px;
+    padding: 40px;
     border-radius: 5px;
     box-sizing: border-box;
     display: flex;
@@ -22,30 +26,29 @@
     margin-bottom: auto;
 }
 
-#delete-text {
+#detail-text {
     color: #575757;
 }
 
-#delete-text h1 {
+#detail-text h1 {
     font-size: 20px; 
     font-weight: bold; 
     margin: 0;
 } 
+h2{ font-size: 20px; 
+    font-weight: bold; 
+    margin: 0;
 
-#delete-text p {
+}
+#detail-text p {
     font-size: 18px;
 }
 
-#delete-buttons {
-    display: flex;
-    justify-content: flex-end;
-    margin-top: auto;
-}
 
 .delete-btn {
-    width: 100px;
-    height: 35px;
-    font-size: 15px;
+    width: 850px;
+    height: 255px;
+    font-size: 20px;
     font-weight: 700;
     border-radius: 5px;
     outline: 0;
@@ -57,12 +60,3 @@
     background: transparent;
 }
 
-#delete-button {
-    color: #fff;
-    background: #576574;
-    box-shadow: 0px 0px 16px  rgba(0, 0, 0, 0.17);   
-}
-
-.delete {
-    margin-top: -300px;
-}
